--- a/scss/main/main.scss
+++ b/scss/main/main.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
 @import url('https://fonts.googleapis.com/css?family=Acme');
 
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css);
+
 @mixin titles__white-font {
   color: white;
   -webkit-text-stroke: 1px black;
@@ -253,7 +255,7 @@
     cursor: pointer;
     user-select: none;
     transition: all .3s;
-    background: rgba(138, 28, 9, 0.8);
+    background: rgba(138, 28, 9, 0.5);
     p {
       position: absolute;
       right: 7%;
@@ -285,7 +287,7 @@
     }
   }
   .button__show-hide:hover {
-    background: rgba(138, 28, 9, 0.5);
+    background: rgba(138, 28, 9, 0.8);
     border: 2px rgba(0,0,0,0.5) solid;
     color: rgba(0,0,0,0.5);
     transition: all .3s;
