--- a/scss/calc-style/calc-style.scss
+++ b/scss/calc-style/calc-style.scss
@@ -31,16 +31,29 @@
     z-index: 100;
     text-decoration: none;
     .arrow {
-        width: 70px;
-        height: 25px;
+        background: url(../../img/my-logo/return-arrow-white.png) no-repeat center center;
+        background-size: contain;
+        width: inherit;
+        height: 35px;
+        transition: .3s all;
+        margin: 0;
     }
     .return {
         color: white;
+        transition: .3s all;
+        margin: 0;
     }
-    .return:hover {
+}
+.return-btn:hover {
+    .arrow {
+        background: url(../../img/my-logo/return-arrow-white-hover.png) no-repeat center center;
+        background-size: contain;
+        transition: .3s all;
+    }
+    .return {
         color: rgb(128, 128, 128);
+        transition: .3s all;
     }
-    
 }
 
 
@@ -72,10 +85,10 @@ body {
     -webkit-text-stroke: 2px black;
     text-shadow:
     3px 3px 0 #000,
-  -1px -1px 0 #000,  
-  1px -1px 0 #000,
-   -1px 1px 0 #000,
-   1px 1px 0 #000;
+    -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
     font-weight: bold;
     letter-spacing: 2px;
 }
@@ -87,7 +100,6 @@ body {
     height: auto;
     color: white;
     background: rgba(0,0,0,0.8);
-    // border: 2px white solid;
     border-radius: 10px;
     font-family: 'Muli', sans-serif;
     letter-spacing: 1px;
@@ -153,12 +165,20 @@ body {
     }
 }
 
+.validation-text {
+    text-align: center;
+    color: red;
+    height: auto;
+    width: 100%;
+    opacity: 0;
+}
+
 
 .score {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    margin: 30px 0 0 0;
+    margin: 0;
     width: 80%;
     height: 80px;
     font-size: 26px;
@@ -173,36 +193,66 @@ body {
         text-align: center;
         width: 100%;
         bottom: -10px;
+        opacity: 0;
+    }
+    p:nth-child(2).show {
+        opacity: 1;
+        transition: 1s all;
     }
 }
 
+
+
+
+
+
 button {
     @include horizontal-align__center;
-    // margin: 30px auto;
     display: block;
-    color: white;
-    background: transparent;
-    border: 2px white solid;
-    padding: 5px 15px;
+    position: relative;
+}
+.btn {
+    position: relative;
+    width: 100px;
+    height: auto;
     cursor: pointer;
-    transition: .1s all;
+    border: 2px white solid !important;
+    border-radius: 10px;
+    background: transparent;
+    color: white;
     font-size: 20px !important;
+    overflow: hidden; /*slider hide*/
 }
-.btn-radius {
-    border-radius: 10px; 
+.btn:before {
+    content: ""; /*!!!*/
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: rgb(51, 51, 51);
+    width: 100%;
+    height: 100%;
+    transition: all 0.2s ease;
+    z-index: -1;
 }
-button:hover {
-    background: rgb(37, 37, 37);
-    transition: .2s all;
+.btn:before {
+    bottom: -40px;
 }
+.btn:hover:before {
+    bottom: 0;
+    transition: all 0.2s ease;
+}
+
 button:active {
-    // border: 1px white solid;
     transition: .1s all;
     font-size: 21px !important;
-}
-button:focus {
+    border: 1.5px white solid !important;
+    width: 102px;
     outline: 0 !important;
 }
+button:focus {
+    outline: none !important;
+}
+
 
 .margin {
     @include standard-field-height;
