--- a/scss/calc-style/calc-style.css
+++ b/scss/calc-style/calc-style.css
@@ -45,14 +45,10 @@
           box-sizing: border-box;
 }
 
-body {
+body, html {
   position: relative;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -99,6 +95,7 @@ body {
   display: inline-block;
   left: 15%;
   font-size: 20px;
+  font-weight: bolder !important;
 }
 
 .select-field select {
@@ -132,6 +129,26 @@ body {
   transition: .1s all;
 }
 
+.select-field.select-field-wide {
+  height: 78px;
+}
+
+.select-field.select-field-wide p {
+  top: 0;
+  display: block;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.select-field.select-field-wide select {
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: auto;
+  margin: 10px 0 0 0;
+}
+
 .input-field {
   height: 30px;
   margin: 30px auto;
@@ -139,7 +156,7 @@ body {
   font-size: 20px;
 }
 
-.input-field input[type=text] {
+.input-field input[type=number] {
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -175,6 +192,49 @@ body {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   right: 15%;
+}
+
+.input-field.input-field-wide {
+  height: 78px;
+}
+
+.input-field.input-field-wide input[type=number] {
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: auto;
+  margin: 10px 0 0 0;
+}
+
+.input-field.input-field-wide p:nth-child(1) {
+  top: 0;
+  display: block;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.input-field.input-field-wide p:nth-child(3) {
+  top: none;
+  -webkit-transform: none;
+          transform: none;
+  top: 67%;
+  display: block;
+  right: 15%;
+}
+
+.link {
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.link:hover {
+  color: grey;
+  -webkit-transition: all .3s;
+  transition: all .3s;
 }
 
 .validation-text {
