--- a/scss/calc-style/calc-style.css
+++ b/scss/calc-style/calc-style.css
@@ -3,21 +3,27 @@
 @import url("https://fonts.googleapis.com/css?family=Muli");
 .return-btn {
   position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 10px;
-  top: 10px;
   font-size: 18px;
   z-index: 100;
   text-decoration: none;
+  text-shadow: 0px 0px 0 #000, -1px -1px 0 #000,   1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  -webkit-text-stroke: .5px black;
+  z-index: 100;
 }
 
 .return-btn .arrow {
   background: url(../../img/my-logo/return-arrow-white.png) no-repeat center center;
+  -webkit-transition: .3s all;
+  transition: .3s all;
   background-size: contain;
   width: inherit;
   height: 35px;
-  -webkit-transition: .3s all;
-  transition: .3s all;
   margin: 0;
+  z-index: -1;
 }
 
 .return-btn .return {
@@ -25,13 +31,14 @@
   -webkit-transition: .3s all;
   transition: .3s all;
   margin: 0;
+  z-index: -1;
 }
 
 .return-btn:hover .arrow {
   background: url(../../img/my-logo/return-arrow-white-hover.png) no-repeat center center;
-  background-size: contain;
   -webkit-transition: .3s all;
   transition: .3s all;
+  background-size: contain;
 }
 
 .return-btn:hover .return {
@@ -312,7 +319,7 @@ button {
   position: absolute;
   bottom: 0;
   right: 0;
-  background: #333333;
+  background: #444444;
   width: 100%;
   height: 100%;
   -webkit-transition: all 0.2s ease;
