--- a/scss/calc-style/calc-style.scss
+++ b/scss/calc-style/calc-style.scss
@@ -25,30 +25,41 @@
 
 .return-btn {
     position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
     left: 10px;
-    top: 10px;
     font-size: 18px;
     z-index: 100;
     text-decoration: none;
+    text-shadow:
+    0px 0px 0 #000,
+    -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+    -webkit-text-stroke: .5px black;
+    z-index: 100;
     .arrow {
         background: url(../../img/my-logo/return-arrow-white.png) no-repeat center center;
+        transition: .3s all;
         background-size: contain;
         width: inherit;
         height: 35px;
-        transition: .3s all;
         margin: 0;
+        z-index: -1;
     }
     .return {
         color: white;
         transition: .3s all;
         margin: 0;
+        z-index: -1;
     }
 }
 .return-btn:hover {
     .arrow {
         background: url(../../img/my-logo/return-arrow-white-hover.png) no-repeat center center;
-        background-size: contain;
         transition: .3s all;
+        background-size: contain;
     }
     .return {
         color: rgb(128, 128, 128);
@@ -273,7 +284,7 @@ button {
     position: absolute;
     bottom: 0;
     right: 0;
-    background: rgb(51, 51, 51);
+    background: rgb(68, 68, 68);
     width: 100%;
     height: 100%;
     transition: all 0.2s ease;
