--- a/scss/main/main.scss
+++ b/scss/main/main.scss
@@ -39,14 +39,19 @@ $defaultTransparentBlackBg: rgba(0,0,0,0.8);
     width: 100%;
     margin: 0;
     padding: 0;
-    background: url(../../img/backgrounds/diet-plan.jpg) no-repeat top center;
+    background:
+    linear-gradient(to top, rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,0.2)),
+    linear-gradient(to left, rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,0.2)),
+    linear-gradient(to right, rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,0.2)),
+    linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,0.2)),
+    url(../../img/backgrounds/diet-plan.jpg) no-repeat top center;
     background-size: cover;
     /* filter: blur(2px) contrast(2) brightness(1) grayscale(0.5); */
   }
 
   .social-icons {
     position: fixed;
-    left: 0;
+    right: 0;
     top: 50%;
     transform: translateY(-50%);
     height: 90px;
